--- a/Administrador/templates/granjas.html
+++ b/Administrador/templates/granjas.html
@@ -1,23 +1,12 @@
 {% extends './layouts/base.html' %}
 
 {% block content %}
-<div class="container">
+<!-- Content here -->
+<div class="container-md">
     <h2 class="mb-4">Gestión de Granjas</h2>
     <form method="post">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="mb-2 ">
-                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                {{ field }}
-                {% if field.help_text %}
-                    <small class="form-text text-muted">{{ field.help_text }}</small>
-                {% endif %}
-                {% for error in field.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
-            </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-primary">Enviar</button>
+       {{ form }}
+        <button type="submit" class="">Enviar</button>
     </form>
 </div>
 {% endblock %}
