--- a/Administrador/templates/layouts/base.html
+++ b/Administrador/templates/layouts/base.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
+
     <style>
         .navbar-custom {
-            background-color: #0d6efd;
+            background-color: #2dff85;
         }
+
         .navbar-custom .navbar-brand,
         .navbar-custom .nav-link {
-            color: white;
+            color: rgb(29, 29, 29);
+          
         }
+
+        .navbar-brand {
+            font-family: "Playwrite CU", cursive;
+            font-weight: bold;
+        }
+
         .navbar-custom .nav-link:hover {
             color: #f8f9fa;
         }
+
+        .container-custom {
+            background-color: #69ffc6;
+        }
     </style>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sistema de Gestión</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">DietasGo🐮</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,7 +59,7 @@
         </div>
     </nav>
 
-    <div class="container mt-1">
+    <div class="container mt-5 p-3">
         {% block content %}
         
         {% endblock %}
@@ -49,4 +68,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
